Run OpenAPI generator
